Revert MT-Engine API key auth
